                     CHANGES version 5.33.0

           This file summarizes changes made since 5.0

Version 5.33.0


Version 5.32.0

Fixed: Issue #1028: When the Monit statefile was removed, the "monit start <service>" action for
services with "onreboot nostart" option started the service, but didn't enable the monitoring.
The same problem occurred if a new "onreboot nostart" service was added, even if the statefile
existed.

Fixed: Issue #1029: The generic protocol test truncated the received data in the case that it
contained zeros.

Fixed: PAM authentication: Users with a valid password for disabled account can login to Monit.
Thanks to Youssef Rebahi-Gilbert.

Fixed: Monit may crash or the HTTP interface can block if long stream of HTTP headers is send to
the Monit HTTP interface. Thanks to Youssef Rebahi-Gilbert for report.


Version 5.31.0

New: Issue #1021: Add support for Linux OpenZFS 2.x I/O statistics

New: Issue #555: Add support for FreeBSD ZFS I/O statistics (requires FreeBSD 12.x or later).

Fixed: Issue #1025: If Monit 5.30.0 CLI action was executed for non-existent service name, the error
message was not reported properly. Thanks to Lutz Mader for fix.

Fixed: Issue #1026: If Monit reload was requested during the (optional) start delay interval, Monit did wait
for the delay to pass and performed one test cycle with the od configuration, before the reload was performed.
Monit will reload the configuration immediately now.


Version 5.30.0

New: Add a 'read-only' option to the httpd statement. The option can be used on the TCP socket, the unix
socket or both. Example for setting the whole TCP socket read-only and the unix socket read-write (so the
Monit CLI actions like service start/stop will work):
    set httpd
        port 2812
            read-only
            allow localhost
        unixsocket /run/monit.socket
Thanks to Christian Goettsche for contributing this feature.
